# fast_api_crash

./: Dockerfile  README.md  database_01.py  main.py  pyproject.toml  repository.py  routers_01.py  schemas_01.py
